--- a/app/src/main/res/layout/activity_sberbank_main.xml
+++ b/app/src/main/res/layout/activity_sberbank_main.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".SberbankMainActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/person"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
